# eradiate

./: .bumpversion.cfg  .bumpversion.toml  .clang-format  .git-blame-ignore-revs  .gitignore  .gitmodules  .isort.cfg  .pre-commit-config.yaml  .readthedocs.yml  .style.yapf  .taplo.toml  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Dockerfile  MANIFEST.in  Makefile  README.md  conda_create_env.sh  docker-build.yml  docker-compose.yml  pyproject.toml  pytest_metrics.md  rami_test.ipynb  readthedocs.yml  setpath.bat  setpath.ps1  setpath.sh  setup.cfg  setup.py
.devcontainer/: create-command.sh  devcontainer.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  build_issue.md  feature_request.md  other_question.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: cd.yml  ci.yml  docker.yml  lint.yml  report.yml
.github/workflows_old/: ci.yml
benchmarks/: asv.conf.json  eradiate.toml
benchmarks/benchmarks/: __init__.py  bench_atmosphere.py  bench_rami4atm.py  bench_romc.py
benchmarks/benchmarks_noasv/: benchmark_spectral_loop.py
builder/: .dockerignore  Dockerfile
custom_data/aerosol/: govaerts_2021-continental.nc  govaerts_2021-desert.nc
docker-jupyterlab/: Dockerfile
docker/eradiate/: Dockerfile
docker/eradiate-base/: Dockerfile
docker/eradiate-jupyterlab/: Dockerfile
docker/eradiate-kernel/: Dockerfile
docker/eradiate-kernel-builder/: Dockerfile
docs/: Makefile  bibliography.rst  conf.py  contributing.rst  convert_figures.py  dependencies.rst  generate_extra_docs.py  generate_figures.py  generate_md_cli.py  generate_rst_api.py  generate_rst_data.py  generate_rst_plugins.py  index.rst  index_latex.rst  maintainer_guide.rst  reference_cli.md  references.bib  requirements.txt
docs/_ext/: autodocsumm.py  ertdocs.py  exec.py  pluginparameters.py  subfig.py
docs/_generate/: README.txt  __init__.py  factories.py  md_cli.py  rst_plugins.py
docs/_static/: theme_overrides.css
docs/_templates/: autoclass.rst  footer.html
docs/data/: absorption_databases.rst  aerosols_particles.rst  atmosphere_thermoprops.rst  formats.rst  intro.rst  rami_scenes.rst  solar_irradiance.rst  srf.rst
docs/developer_guide/: benchmark.rst  design_atmosphere.rst  design_pipeline_engine.rst  dev_install.rst  factory_guide.rst  index.rst  lazy_loading.rst  update.rst
docs/fig/: cuboid_leaf_cloud_params.dot  data  package.drawio
docs/generate/: factories.py  md_cli.py  rst_plugins.py  util.py
docs/introduction/: getting_started.rst
docs/reference_api/: config.rst  converters.rst  data.rst  eradiate_core.rst  experiments.rst  factory.rst  index.rst  kernel.rst  mode.rst  pipelines.rst  quad.rst  radprops.rst  rng.rst  scenes.rst  srf_tools.rst  test_tools.rst  tutorials.rst  units.rst  validators.rst  warp.rst  xarray.rst
docs/release_notes/: index.md  v0.25.x.md  v0.26.x.md  v0.28.x.md  v0.29.x.md  v0.30.x.md  v0.31.x.md  v1.0.x.md  v1.1.x.md  v1.2.x.md
docs/rst/: changelog.rst  contributing.rst  dependencies.rst  maintainer_guide.rst
docs/src/: reference_cli.md
docs/user_guide/: atmosphere_experiment.rst  canopy_scene_loader.rst  config.rst  conventions.rst  dem_experiment.rst  expert_interface.ipynb  index.rst  install.rst  package_structure.rst  pipeline_engine.ipynb  radiometric_kernel_interface.rst  spectral_discretization.ipynb  unit_guide_user.rst
eradiate/: __init__.py  _attrs.py  _config.py  _factory.py  _mode.py  _presolver.py  _units.py  _util.py  attrs.py  ckd.py  conftest.py  contexts.py  converters.py  exceptions.py  frame.py  mesh.py  notebook.py  plot.py  quad.py  units.py  validators.py  warp.py
eradiate/data/: __init__.py  absorption_spectra.py  chemistry.py  ckd_absorption.py  core.py  microprops.py  solar_irradiance_spectra.py  spectral_response_function.py  thermoprops.py  thermoprops_profiles.py
eradiate/experiments/: __init__.py  _core.py  _onedim.py  _rami.py  _rami4atm.py
eradiate/kernel/: __init__.py  _bitmap.py  gridvolume.py  logging.py  transform.py
eradiate/microprops/: __init__.py  shettle_fenn_1979.py
eradiate/pipelines/: __init__.py  _aggregate.py  _assemble.py  _compute.py  _core.py  _defaults.py  _gather.py
eradiate/radprops/: __init__.py  absorption.py  mie.py  particle_dist.py  particles.py  rad_profile.py  rayleigh.py  sad.py  vert_dist.py
eradiate/scenes/: __init__.py  atmosphere.py  base.py  biosphere.py  core.py  factory.py  illumination.py  integrators.py  lithosphere.py  measure.py  spectra.py  surface.py  util.py
eradiate/scripts/: ertdownload.py  ertonedim.py  ertrami.py  ertrayleigh.py
eradiate/solvers/: __init__.py  onedim.py  postprocess.py
eradiate/tests/: Dockerfile  test_basic.py  test_eradiate.py  (+1 more)
ext/: CMakeLists.txt
playgrounds/: mf_aggregate.ipynb
requirements/: _utils.py  check_conda_env.py  copy_envvars.py  dev.in  dev.txt  docs.in  docs.txt  environment-dev.yml  environment-minimal.yml  environment-optional.yml  environment-production.yml  environment-recommended.yml  environment.in  environment.yml  layered.yml  main.in  main.txt  make_conda_env.py  make_pip_in_files.py  make_pip_txt_files.py  optional.in  optional.txt  production.in  production.txt  recommended.in  release.py  tests.in  tests.txt
resources/: README_PyPI.md  README_pypi.md  downloads.yml  environment.yml  generate_stub_files.py  release.py
src/plugins/: CMakeLists.txt
src/plugins/src/: CMakeLists.txt
src/plugins/src/bsdfs/: CMakeLists.txt  bilambertian.cpp  rpv.cpp  rpv_old.cpp
src/plugins/src/phase/: CMakeLists.txt  polarised_rayleigh.cpp  rayleigh_polarized.cpp  tabphase_irregular.cpp
src/plugins/src/sensors/: CMakeLists.txt  distantflux.cpp  hdistant.cpp  mdistant.cpp  mdistant_gonio.cpp  mradiancemeter.cpp
src/plugins/src/volumes/: CMakeLists.txt  grid_spherical.cpp  sphericalcoords.cpp  sphericalgrid.cpp
test_report/: conf.py  generate_report.py  generate_summary_files.py  index.rst  parse_test_spec.py
tests/: conftest.py  test_ckd.py  test_mode.py  test_presolver.py  test_util.py
(+1433 files in other folders)
