[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61"]

[project]
authors = [
  {name = "The Eradiate Team"}
]
description = "A radiative transfer model for the Earth observation community"
dynamic = ["dependencies", "optional-dependencies"]
license = {text = "LGPLv3"}
maintainers = [
  {name = "The Eradiate Team"}
]
name = "eradiate"
readme = "README.md"
requires-python = ">=3.9"
version = "0.28.0-rc2"

[project.scripts]
eradiate = "eradiate.cli:main"

[project.urls]
changelog = "https://github.com/eradiate/eradiate/CHANGELOG.md"
documentation = "https://eradiate.readthedocs.io"
repository = "https://github.com/eradiate/eradiate"

[tool.pytest.ini_options]
filterwarnings = [
  "error",
  "ignore:distutils Version classes are deprecated:DeprecationWarning",
  # Remove the following when environment issues are solved
  "ignore:numpy.ndarray size changed, may indicate binary incompatibility:RuntimeWarning",
  # Remove the following when Jupyter stops issuing those
  "ignore:Jupyter is migrating its paths to use standard platformdirs"
]
testpaths = "tests"

[tool.ruff]
exclude = ["docs/_ext/autodocsumm.py"]
src = ["src", "tests"]

[tool.ruff.lint]
ignore = ["E501", "F821"]
isort = {relative-imports-order = "closest-to-furthest"}
per-file-ignores = {"*.ipynb" = ["E402"]}
select = ["I", "F", "E"]

[tool.setuptools]
include-package-data = true  # Required because of package data

[tool.setuptools.dynamic]
dependencies = {file = ["requirements/pip/dependencies.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
recommended = {file = ['requirements/pip/recommended.txt']}

[tool.setuptools.package-data]
# Required by PEP 561
# https://mypy.readthedocs.io/en/stable/installed_packages.html#creating-pep-561-compatible-packages
eradiate = ["py.typed", "*.pyi"]

[tool.setuptools.packages.find]
include = ["eradiate*"]
namespaces = false
where = ["src"]
