[metadata]
name = eradiate
version = attr: eradiate.__version__
author = The Eradiate Team
maintainer = The Eradiate Team
license = GPLv3
url = https://github.com/eradiate/eradiate
description = A radiative transfer model for the Earth observation community
long_description = file: README.md
long_description_content_type = text/markdown

[options]
# Main dependencies
install_requires =
    aabbtree
    attrs
    click
    cerberus
    dask
    dessinemoi
    environ-config
    iapws
    matplotlib
    netcdf4
    numpy
    pint
    pinttrs>=21.3.0
    rich
    ruamel.yaml
    scipy
    tqdm
    xarray

# Package discovery
packages = find:
include_package_data = True

[options.packages.find]
exclude = tests

# Extra deps
[options.extras_require]
tests =
    pytest
    pytest-json-report
    pytest-metadata
    pytest-xdist
    rst2pdf
    sphinx
    tabulate
dev =
    black
    bump2version
    conda-lock>=0.12
    coverage
    ipython
    ipywidgets
    isort
    jupyterlab
    pip
    pip-tools
    setuptools
    twine
docs =
    mock
    sphinx-book-theme
    sphinx>=3.1
    sphinxcontrib-bibtex>=2.0
    sphinx-copybutton
    sphinx-gallery
    sphinx-panels
    tinydb

[options.entry_points]
console_scripts =
    ertonedim = eradiate.scripts.ertonedim:cli
    ertrami = eradiate.scripts.ertrami:cli
