[metadata]
name = eradiate
author = The Eradiate Team
maintainer = The Eradiate Team
license = GPLv3
url = https://github.com/eradiate/eradiate
description = A radiative transfer model for the Earth observation community
long_description = file: README.md
long_description_content_type = text/markdown

[options]
# Main dependencies
install_requires =
    aabbtree
    astropy
    attrs
    click
    cerberus
    dask
    dessinemoi
    environ-config
    iapws
    matplotlib
    netcdf4
    numpy
    pint
    pinttrs>=21.3.0
    pooch
    python-dateutil
    rich
    ruamel.yaml
    scipy
    seaborn
    tqdm
    xarray>=0.19,!=0.20.*

# Package discovery
package_dir =
    =src
packages = find:
include_package_data = True

[options.packages.find]
where = src
include = *

# Extra deps
[options.extras_require]
tests =
    pytest
    pytest-json-report
    pytest-metadata
    pytest-xdist
    rst2pdf
    sphinx
    tabulate
dev =
    black
    bump2version
    conda-lock>=0.12
    coverage
    ipython
    ipywidgets
    isort
    jupyterlab
    pip
    pip-tools>=6.5
    setuptools>=45
    setuptools-scm>=6.2
    twine
docs =
    autodocsumm
    mock
    sphinx-book-theme>=0.1.10
    sphinx>=3.1
    sphinxcontrib-bibtex>=2.0
    sphinx-autobuild
    sphinx-click>=3.0.2
    sphinx-copybutton
    sphinx-design
    sphinx-gallery

[options.entry_points]
console_scripts =
    ertdata = eradiate.scripts.ertdata:cli
    ertshow = eradiate.scripts.ertshow:cli
